--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amra's Car Racing Game</title>
-    <link rel="stylesheet" href="style.css"> 
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="./style.css"> 
+
 </head>
 <body> 
     <div id="gameArea">       
@@ -14,5 +14,7 @@
         <div class="obstacle" id="obstacles"></div>
         <div id="finish-line">Finish Line</div>
     </div>
+
+    <script src="./script.js"></script>
 </body>
 </html>
