modification of all files, as game is improving

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 
 </head>
 <body> 
-    <div id="gameArea">       
-        <div id="road"></div>
-        <div id="car"></div>
-        <div class="obstacle" id="obstacles"></div>
-        <div id="finish-line">Finish Line</div>
+    <div id="game-container">
+        <button id="start-button" class="start-button">Start Game</button>
+        <div id="timer" class="timer">00:00</div>
+        <div id="gameArea">
+            <div id="road"></div>
+            <div id="car"></div>
+            <div class="static-obstacle" id="obstacles"></div>
+            <div id="finish-line">Finish Line</div>
+        </div>
     </div>
 
     <script src="./script.js"></script>
